<resources>
    <string name="app_name">Driver</string>
    <string name="login">LOGIN</string>
    <string name="almosky_laundry">Almosky Laundry</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="go_to_next_order">Go to next order</string>
    <string name="stop_shift">Stop Shift</string>
    <string name="logout">Logout</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="pickup">Pickup</string>
    <string name="remaining_time">Remaining time</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="items">Items</string>
    <string name="order">Order</string>

    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>


    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="new_order">New Order</string>
    <string name="order_no_hash_symbol">#%s</string>
    <string name="my_orders">My orders</string>
    <string name="title_activity_tracking">Map</string>
    <string name="start_track">start track</string>
    <string name="reached">Reached</string>
    <string name="there_are_new_orders_for_you_right_now">Oh..Oh..  \n There are no new orders for you right now</string>
    <string name="new_orders">New Orders</string>
    <string name="order_completed">This Order completed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_received">Payment received ?</string>
    <string name="scan">SCAN</string>
    <string name="paired_devices">Paired devices</string>
    <string name="connected">Connected</string>
    <string name="unpaid_orders">Unpaid orders</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Bluetooth Printer</item>
        <item>POS Terminal Printer</item>
        <item>POS Terminal ZK90</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="choose_printer">Choose Printer</string>
    <string name="net_amount">Net Amount</string>
    <string name="vat_5">VAT (5%)</string>
    <string name="order_total">Order Total</string>
    <string name="AED">AED</string>
    <string name="action_settings">Settings</string>
    <string name="make_order">Make Order</string>
    <string name="btn_dry_clean">Dry Clean</string>
    <string name="dry_clean_iron_and_hang">Dry clean,iron and hang</string>
    <string name="wash_iron">Wash+Iron</string>
    <string name="wash_iron_hang">Wash,iron and hang</string>
    <string name="ironing">Ironing</string>
    <string name="iron_and_hang">Iron and hang</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="text_title_address">Address</string>
    <string name="text_pick_up">Pickup</string>
    <string name="text_change">Change</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_delivery_type_fast">Delivery type :</string>
    <string name="btn_place_order">Place Order</string>
    <string name="text_order_total">Order total</string>
    <string name="text_p">AED</string>
    <string name="text_discount_nisab">NASAB Club Discount(30%)</string>
    <string name="printer_out_of_paper">printer out of paper</string>
</resources>
