<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon"
            android:visibility="gone"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:elevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="Edit Order"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/contentLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/btn_dry_clean"
                                    android:textColor="@color/black"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/dry_clean_iron_and_hang"
                                    android:textColor="#C0C0C0"
                                    android:textSize="16dp" />

                                <TextView
                                    android:id="@+id/tv_dry_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"

                                    android:textColor="#959591"
                                    android:textSize="16dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/dryCleanMinus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/minus"
                                    android:tint="@color/dark_grey" />

                                <TextView
                                    android:id="@+id/dryCleanCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:text="0"
                                    android:textColor="@color/black"
                                    android:textSize="20dp" />

                                <ImageView
                                    android:id="@+id/dryCleanPlus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/plus"
                                    android:tint="@color/dark_grey" />
                            </LinearLayout>
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"></View>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wash_iron"
                                    android:textColor="@color/black"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/wash_iron_hang"
                                    android:textColor="#C0C0C0"
                                    android:textSize="16dp" />

                                <TextView
                                    android:id="@+id/tv_wash_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"

                                    android:textColor="#959591"
                                    android:textSize="16dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/washIronMinus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/minus"
                                    android:tint="@color/dark_grey" />

                                <TextView
                                    android:id="@+id/washIronCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:text="0"
                                    android:textColor="@color/black"
                                    android:textSize="20dp" />

                                <ImageView
                                    android:id="@+id/washIronPlus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/plus"
                                    android:tint="@color/dark_grey" />
                            </LinearLayout>
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey"></View>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ironing"
                                    android:textColor="@color/black"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/iron_and_hang"
                                    android:textColor="#C0C0C0"
                                    android:textSize="16dp" />

                                <TextView
                                    android:id="@+id/tv_iron_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"

                                    android:textColor="#959591"
                                    android:textSize="16dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/ironingMinus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/minus"
                                    android:tint="@color/dark_grey" />

                                <TextView
                                    android:id="@+id/ironingCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:text="0"
                                    android:textColor="@color/black"
                                    android:textSize="20dp" />

                                <ImageView
                                    android:id="@+id/ironingPlus"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@mipmap/plus"
                                    android:tint="@color/dark_grey" />
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:background="@color/green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/addToBasketId"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/add_to_basket"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>